<resources>
    <string name="app_name">CQUEdu</string>
    <string name="background">Background</string>
    <string name="classschedule">My Class Schedule</string>
    <string name="copyright">Copyright ownership belongs to Lorenzo Wu.\nAll rights reserved.</string>
    <string name="coursescores">My Course Scores</string>
    <string name="cquid">CQUID</string>
    <string name="cqulogo">CQU Logo</string>
    <string name="facultyscheme">Faculty Scheme</string>
    <string name="maintitle">Welcome to Mobile CQUEDU !</string>
    <string name="mainsigninfo">Current user: loading...</string>
    <string name="mainfunction1">Student\nInformation</string>
    <string name="mainfunction2">Faculty\nScheme</string>
    <string name="mainfunction3">Class\nSchedule</string>
    <string name="mainfunction4">Course\nScores</string>
    <string name="mainfunction5">GPA\nCalculation</string>
    <string name="mainfunction6">Score\nComparison</string>
    <string name="mainlogout">Log out</string>
    <string name="nulltext"></string>
    <string name="schedule1">Mon</string>
    <string name="schedule2">Tue</string>
    <string name="schedule3">Wed</string>
    <string name="schedule4">Thu</string>
    <string name="schedule5">Fri</string>
    <string name="schedule6">Sat</string>
    <string name="schedule7">Sun</string>
    <string name="scorecomparison">Score Comparison</string>
    <string name="password">Password</string>
    <string name="quit">Quit</string>
    <string name="returnback">Return</string>
    <string name="signin">Sign in</string>
    <string name="search">Search:</string>
    <string name="studentinfo">Student Information</string>
    <string name="titlebar">TitleBar</string>
    <string name="type">Type</string>
</resources>
