<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultyScheme">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/s_tv_signinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/mainsigninfo"
        android:fontFamily="serif"
        android:text="@string/mainsigninfo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/s_iv_cqulogo"
        app:layout_constraintTop_toBottomOf="@+id/s_tv_titlebar" />

    <TextView
        android:id="@+id/s_tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        android:textColor="@color/themec2d1"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_iv_cqulogo" />

    <TextView
        android:id="@+id/s_tv_titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/studentinfo"
        android:fontFamily="serif"
        android:text="@string/facultyscheme"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/s_iv_cqulogo"
        app:layout_constraintTop_toTopOf="@+id/s_iv_cqulogo" />

    <ImageView
        android:id="@+id/s_iv_cqulogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cqulogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cqulogo" />

    <Spinner
        android:id="@+id/s_sp_faculty"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:entries="@array/facultyItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/s_tv_search"
        app:layout_constraintTop_toBottomOf="@+id/s_iv_cqulogo" />

    <ImageView
        android:id="@+id/s_iv_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/cqulogo"
        android:onClick="getScheme"
        app:layout_constraintBottom_toBottomOf="@+id/s_sp_faculty"
        app:layout_constraintStart_toEndOf="@+id/s_sp_faculty"
        app:srcCompat="@drawable/search" />

    <Button
        android:id="@+id/s_bt_return"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonbg"
        android:contentDescription="@string/returnback"
        android:elevation="0dp"
        android:text="@string/returnback"
        android:textColor="@color/themec2l3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <WebView
        android:id="@+id/s_wb_pdf"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/s_bt_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_sp_faculty"
        app:layout_constraintVertical_bias="0.6" />

</android.support.constraint.ConstraintLayout>