<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Studentinfo">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/i_tv_signinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/mainsigninfo"
        android:fontFamily="serif"
        android:text="@string/mainsigninfo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/i_iv_cqulogo"
        app:layout_constraintTop_toBottomOf="@+id/i_tv_titlebar" />

    <TextView
        android:id="@+id/i_tv_titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/studentinfo"
        android:fontFamily="serif"
        android:text="@string/studentinfo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/i_iv_cqulogo"
        app:layout_constraintTop_toTopOf="@+id/i_iv_cqulogo" />

    <ImageView
        android:id="@+id/i_iv_cqulogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cqulogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cqulogo" />

    <LinearLayout
        android:id="@+id/i_linearlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_iv_cqulogo">

        <ListView
            android:id="@+id/i_lv_infolist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/i_tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/search"
        android:textColor="@color/themec2d1"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_linearlayout" />

    <EditText
        android:id="@+id/i_te_search"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/cquid"
        android:contentDescription="@string/search"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/themec2n"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/i_tv_search"
        app:layout_constraintTop_toBottomOf="@+id/i_linearlayout" />

    <ImageView
        android:id="@+id/i_iv_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/cqulogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/i_te_search"
        app:layout_constraintTop_toBottomOf="@+id/i_linearlayout"
        app:srcCompat="@drawable/search" />

</android.support.constraint.ConstraintLayout>