<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseScores">

    <ImageView
        android:id="@+id/p_iv_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bgr"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/p_tv_signinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/mainsigninfo"
        android:fontFamily="serif"
        android:text="@string/mainsigninfo"
        android:textAlignment="center"
        android:textColor="@color/themec1d2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p_iv_cqulogo"
        app:layout_constraintTop_toBottomOf="@+id/p_tv_titlebar" />

    <ImageView
        android:id="@+id/p_iv_cqulogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cqulogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cqulogo" />

    <TextView
        android:id="@+id/p_tv_titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/coursescores"
        android:fontFamily="serif"
        android:text="@string/coursescores"
        android:textAlignment="center"
        android:textColor="@color/themec1d2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p_iv_cqulogo"
        app:layout_constraintTop_toTopOf="@+id/p_iv_cqulogo" />

    <Spinner
        android:id="@+id/p_sp_year"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:entries="@array/Years"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_iv_cqulogo" />

    <Spinner
        android:id="@+id/p_sp_semester"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:entries="@array/Terms"
        app:layout_constraintStart_toEndOf="@+id/p_sp_year"
        app:layout_constraintTop_toBottomOf="@+id/p_iv_cqulogo" />

    <LinearLayout
        android:id="@+id/p_linearlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/p_bt_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p_bt_check">

        <ListView
            android:id="@+id/p_lv_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/p_bt_return"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonrbg"
        android:contentDescription="@string/returnback"
        android:elevation="0dp"
        android:text="@string/returnback"
        android:textColor="@color/themec1l3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/p_bt_check"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="onSearch"
        android:text="Check"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/p_sp_semester"
        app:layout_constraintTop_toBottomOf="@+id/p_iv_cqulogo" />

</android.support.constraint.ConstraintLayout>